--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
