--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
-    "redux-thunk": "^2.3.0",
-    "react-settings-pane": "^0.1.5"
+    "react-settings-pane": "^0.1.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^6.3.0",
     "redux-devtools-extension": "^2.13.8"
   }
 }
