modified config file for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,11 @@
-version: 2
-jobs:
+version: 2.1
+orbs:
+  # "cypress-io/cypress@1" installs the latest published
+  # version "1.x.y" of the orb. We recommend you then use
+  # the strict explicit version "cypress-io/cypress@1.x.y"
+  # to lock the version and prevent unexpected CI changes
+  cypress: cypress-io/cypress@1
+workflows:
   build:
-    docker:
-      - image: "circleci/node:8"
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - 'v1-dependencies-{{ checksum "package.json" }}'
-            - v1-dependencies-
-      - run: "npm install"
-      - save_cache:
-          paths:
-            - node_modules
-          key: 'v1-dependencies-{{ checksum "package.json" }}'
-      - run: "npm run cypress:test"
+    jobs:
+      - cypress/run # "run" job comes from "cypress" orb
