--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ workflows:
   build:
     jobs:
       - cypress/install:
-          build: "npm run build" # run a custom app build step
+          build: "CI=false npm run build" # run a custom app build step
       - cypress/run:
           requires:
             - cypress/install
