--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,6 @@ workflows:
       - cypress/run:
           requires:
             - cypress/install
-          start: "npm start & wait-on http://localhost:3000' # start server before running tests
+          start: "npm start & wait-on http://localhost:3000" # start server before running tests
           record: true # record results on Cypress Dashboard
           group: "all tests" # name this group "all tests" on the dashboard
