--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
     "react-settings-pane": "^0.1.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "wait-on": "^5.2.1"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
@@ -47,7 +48,6 @@
   },
   "devDependencies": {
     "cypress": "^6.3.0",
-    "redux-devtools-extension": "^2.13.8",
-    "wait-on": "^5.2.1"
+    "redux-devtools-extension": "^2.13.8"
   }
 }
