--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,29 @@
-version: 2.1
-orbs:
-  cypress: cypress-io/cypress@1
+version: 2
+jobs:
+  test:
+    docker:
+      - image: cypress/base:10
+    steps:
+      - checkout
+      - restore_cache:
+        keys: -cache-{{ checksum "package.json"}}
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      -run:
+          command: npx cypress verify
+      - save_cache:
+        key: cache={{ checksum "package.json"}}
+        paths:
+          - ~/.npm
+          - ~/.cache
+      - run:
+          command: npm start
+          background: true
+      - run: npx cypress run
+
 workflows:
+  version: 2
   build:
     jobs:
-      - cypress/install:
-          build: "CI=false npm run build && npm install" # run a custom app build step
-      - cypress/run:
-          requires:
-            - cypress/install
-          start: "npm start" # start server before running tests
-          record: true # record results on Cypress Dashboard
-          group: "all tests" # name this group "all tests" on the dashboard
-          wait-on: "http-get://127.0.0.1:3000"
+      - test
