--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.17.0",
+    "dotenv": "^8.2.0",
     "firebase": "^8.0.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
